list of products and create a new product finished

--- a/Web/Pages/Products/Create.cshtml
+++ b/Web/Pages/Products/Create.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning mt-2" asp-page="./Index">Back to List</a>    
 </div>
 
 @section Scripts {
