--- a/Web/Pages/Products/Index.cshtml
+++ b/Web/Pages/Products/Index.cshtml
@@ -6,11 +6,44 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<a href="./Products/Create">Create Product</a>
+<a class="btn btn-success" asp-page="Create">Create New Product</a>
 
-<ul>
-    @foreach (var product in Model.Products)
-    {
-        <li>@product.Name - @product.Price</li>
-    }
-</ul>
+<table class="table">
+    <thead>
+        <tr>
+            <th hidden>
+                @Html.DisplayNameFor(model => model.Products[0].Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Products[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Products[0].Price)
+            </th>
+            <th>
+                Actions
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Products)
+        {
+            <tr>
+                <td hidden>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>                
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
