--- a/Web/Pages/Products/Index.cshtml
+++ b/Web/Pages/Products/Index.cshtml
@@ -40,10 +40,56 @@
                 </td>                
                 <td>
                     <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a href="#" data-toggle="modal" data-target="#productDetailsModal" data-id="@item.Id">Details</a> |                    
                     <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="modal fade" id="productDetailsModal" tabindex="-1" role="dialog" aria-labelledby="productDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productDetailsModalLabel">Product Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Product details will be loaded here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section scripts
+{
+    <script>
+    $(document).ready(function () {        
+        $('#productDetailsModal').on('show.bs.modal', function (event) {                      
+
+            var button = $(event.relatedTarget); // Button that triggered the modal
+            var productId = button.data('id');  // Extract product ID from data-id                
+
+            $.ajax({
+                    url: './Products?handler=ProductDetails', // Adjust the URL to your Get method
+                data: { id: productId },
+                method: 'GET',
+                success: function (response) {
+                    // Load the fetched partial view into the modal's body
+                    $('#productDetailsModal .modal-body').html(response);
+                },
+                error: function () {
+                    $('#productDetailsModal .modal-body').html('<p>Error loading product details.</p>');
+                }
+            });
+        });
+    });
+    </script>
+}
