--- a/Web/Pages/Products/Edit.cshtml
+++ b/Web/Pages/Products/Edit.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Edit" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
