--- a/Web/Pages/Products/Edit.cshtml
+++ b/Web/Pages/Products/Edit.cshtml
@@ -34,6 +34,8 @@
     </div>
 </div>
 
+<span class="text-danger">@Model.ErrorMessage</span>
+
 <div>
     <a class="btn btn-warning mt-2" asp-page="./Index">Back to List</a>
 </div>
